@@ -10,17 +10,6 @@ import java.util.List;
 
 public class PR113append {
 
-    public static void main(String[] args) {
-        String camiFitxer = System.getProperty("user.dir") + "/data/frasesMatrix.txt";
-        try {
-            afegirFrases(camiFitxer);
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-    }
-
-    // Mètode que afegeix exactament dues frases al final
-    // i garanteix només una línia en blanc final
     public static void afegirFrases(String camiFitxer) throws IOException {
         List<String> frases = Arrays.asList(
                 "I can only show you the door",
@@ -30,27 +19,22 @@ public class PR113append {
         Path path = Path.of(camiFitxer);
         List<String> liniesExistents = new ArrayList<>();
 
-        // Llegir el fitxer si existeix
         if (Files.exists(path)) {
             liniesExistents = new ArrayList<>(Files.readAllLines(path, StandardCharsets.UTF_8));
 
-            // Eliminar **totes** les línies buides finals
+            // Eliminar totes les línies buides finals
             while (!liniesExistents.isEmpty() && liniesExistents.get(liniesExistents.size() - 1).isEmpty()) {
                 liniesExistents.remove(liniesExistents.size() - 1);
             }
         }
 
-        // Afegir les noves frases
+        // Afegim només les frases noves
         liniesExistents.addAll(frases);
 
-        // Combinar tot en un sol contingut amb salts de línia
-        StringBuilder contingut = new StringBuilder();
-        for (String linia : liniesExistents) {
-            contingut.append(linia).append("\n");
-        }
-        contingut.append("\n"); // només una línia en blanc final
+        // Afegim una única línia en blanc final
+        liniesExistents.add(""); // només una línia en blanc
 
         // Escriure tot al fitxer
-        Files.writeString(path, contingut.toString(), StandardCharsets.UTF_8);
+        Files.write(path, liniesExistents, StandardCharsets.UTF_8);
     }
 }
